# gw-copilot

./: .gitignore  LICENSE  PLAN.md  README.md  gw_cli.py  pyproject.toml  requirements.txt
example_aoi/: aoi.geojson
gw/: artifacts.py  cli.py  cli_entry.py  dashboard.py  fix_apply.py  pipeline.py  pipeline_cli.py  revalidate.py  revalidate_cli.py  server.py
gw/api/: artifacts.py  docs.py  fs.py  jobs.py  llm_config.py  main.py  model_profile.py  model_session.py  model_snapshot.py  output_probes.py  patches.py  plots.py  qa_diagnostics.py  routes.py  run_snapshots.py  schemas.py  simulator_config.py  viz.py  workspace_files.py  workspace_scan.py  workspace_state.py
gw/engine/: aoi.py  critique.py  site_builder.py
gw/llm/: chat_agent.py  docs_retriever.py  draft.py  fix_plan.py  mf6_filetype_knowledge.py  read_router.py  registry.py  schemas.py  tool_loop.py
gw/llm/builtin_docs/: mf6_quickref.md
gw/llm/providers/: anthropic_provider.py  base.py  openai_provider.py
gw/mf6/: __init__.py  flopy_bridge.py  io.py
gw/projects/: __init__.py  importer.py
gw/qa/: checks_config.py  checks_grid.py  checks_hydro.py  engine.py  llm_reviewer.py  report.py
gw/run/: mf2005_runner.py  mf6_runner.py  mfusg_runner.py  modpath_runner.py  mt3dms_runner.py  parse_listing.py  report.py  seawat_runner.py
gw/simulators/: base.py  registry.py
gw/simulators/mf2005/: adapter.py  (+2 more)
gw/utils/: read_inputs.py
scripts/: prepare_release.py
ui/: .env.development  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/src/: App.tsx  api.ts  styles.css  types.ts
(+26 files in other folders)
