[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gw-copilot"
dynamic = ["version"]
description = "AI-powered groundwater modeling assistant for MODFLOW 6"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flopy>=3.6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "shapely>=2.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "matplotlib>=3.8",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gw-copilot = "gw.server:main"
gw-cli = "gw.cli:app"

[tool.hatch.version]
path = "gw/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["gw"]
artifacts = ["gw/_frontend"]
